--- a/index.html
+++ b/index.html
@@ -81,25 +81,29 @@
 
         <span style="cursor: pointer; line-height: 8px; padding: 12px;" class="btn btn-primary js-scroll-trigger" onclick="document.body.className='en'">EN</span>
         <span style="cursor: pointer; line-height: 8px; padding: 12px;" class="btn btn-primary js-scroll-trigger" onclick="document.body.className='fr'">FR</span>
-        <!-- <span style="cursor: pointer; line-height: 8px; padding: 12px;" class="btn btn-primary js-scroll-trigger" onclick="document.body.className='it'">IT</span>
-        <span style="cursor: pointer; line-height: 8px; padding: 12px;" class="btn btn-primary js-scroll-trigger" onclick="document.body.className='pt'">PT</span> -->
+        <!-- <span style="cursor: pointer; line-height: 8px; padding: 12px;" class="btn btn-primary js-scroll-trigger" onclick="document.body.className='it'">IT</span> -->
+        <span style="cursor: pointer; line-height: 8px; padding: 12px;" class="btn btn-primary js-scroll-trigger" onclick="document.body.className='pt'">PT</span>
 
         <h2 class="text-white mx-auto mt-5 mb-2">
           <span lang="en">Explore 100% of your potential!</span>
           <span lang="fr">Explorez 100% de votre potentiel!</span>
+          <span lang="pt">Explore 100% de seu potencial!</span>
         </h2>
         <h2 class="text-white mx-auto mt-2 mb-2">
           <span lang="en">Take good care of your body & mind</span>
           <span lang="fr">Prenez bien soin de votre corps et esprit</span>
+          <span lang="pt">Tome bom cuidado de seu corpo e mente</span>
         </h2>
         <h2 class="text-white mx-auto mt-2 mb-5">
           <span lang="en">Improve your exercise, nutrition & rest</span>
           <span lang="fr">Améliorez votre activité physique, nutrition & repos</span>
+          <span lang="pt">Aperfeiçoe seus exercîcios, nutrição e repouso</span>
         </h2>
         <a href="#triangle" class="btn btn-primary js-scroll-trigger">
           <i class="fas fa-caret-right"></i>
           <span lang="en"> Your Health Triangle </span>
           <span lang="fr"> Votre Triangle de Santé </span>
+          <span lang="pt"> Seu Triângulo da Saúde </span>
           <i class="fas fa-caret-left"></i>
         </a>
       </div>
@@ -114,23 +118,28 @@
                 <h1 class="text-white mb-4">
                     <span lang="en">The Health Triangle</span>
                     <span lang="fr">Le Triangle de Santé</span>
+                    <span lang="pt">O Triângulo da Saúde</span>
                 </h1>
                 <i>
                   <h5 class="text-white mx-auto">
-                      <span lang="en">Our personal health has 3 main components:</span>
-                      <span lang="fr">Notre santé personnelle a 3 composants principaux :</span>
+                      <span lang="en">Our physical health has 3 main components:</span>
+                      <span lang="fr">Notre santé physique a 3 composants principaux&nbsp;:</span>
+                      <span lang="pt">Nossa saúde física tem 3 componentes principais:</span>
                   </h5>
                   <h5 class="text-white mx-auto">
                       <span lang="en">Exercise - gym, outside & inside sports...</span>
-                      <span lang="fr">Exercice - salle de sport, pratiques individuelles & collectives...</span>
+                      <span lang="fr">Exercice - salle de sport, sports individuels et collectifs...</span>
+                      <span lang="pt">Exercício - academia, esportes individuais e coletivos...</span>
                   </h5>
                   <h5 class="text-white mx-auto">
                       <span lang="en">Nutrition - macro & micronutrients, energy...</span>
-                      <span lang="fr">Nutrition - macro & micronutriments, la qualité des aliments...</span>
+                      <span lang="fr">Nutrition - macro & micronutriments, l'énergie...</span>
+                      <span lang="pt">Nutrição - macro & micronutrientes, energia...</span>
                   </h5>
                   <h5 class="text-white mx-auto">
                       <span lang="en">Rest - sleep, peace of mind, stress/anxiety control...</span>
                       <span lang="fr">Repos - le sommeil, la tranquillité de l'esprit, le contrôle du stress...</span>
+                      <span lang="pt">Repouso - sono, tranquilidade da mente, controle do estresse...</span>
                   </h5>
                 </i>
                 <br/>
@@ -142,6 +151,7 @@
                             <br/>
                             <span lang="en">Exercise</span>
                             <span lang="fr">Exercice</span>
+                            <span lang="pt">Exercício</span>
                             </a>
                         </td>
                     </tr>
@@ -151,6 +161,7 @@
                             <br/>
                             <span lang="en">Nutrition</span>
                             <span lang="fr">Nutrition</span>
+                            <span lang="pt">Nutrição</span>
                             </a>
                         </td>
                         <td style="text-align: center; padding: 10px;">
@@ -163,6 +174,7 @@
                             <br/>
                             <span lang="en">Rest</span>
                             <span lang="fr">Repos</span>
+                            <span lang="pt">Repouso</span>
                             </a>
                         </td>
                     </tr>
@@ -186,6 +198,7 @@
           <div class="middle">
               <span lang="en"> EXERCISE </span>
               <span lang="fr"> EXERCICE </span>
+              <span lang="pt"> EXERCÍCIO </span>
           </div>
         </div>
         <div id="exercise" class="col-xl-4 col-lg-5">
@@ -194,19 +207,23 @@
                 <i class="fas fa-running fa-lg"></i>
                 <span lang="en"> EXERCISE </span>
                 <span lang="fr"> EXERCICE </span>
+                <span lang="pt"> EXERCÍCIO </span>
                 <i class="fas fa-dumbbell fa-lg"></i>
              </h4>
             <h5 class="text-white mb-2">
                 <span lang="en">To maintain a good performance our bodies need to move.</span>
                 <span lang="fr">Pour maintenir une bonne performance physique, notre corps à besoin de bouger.</span>
+                <span lang="pt">Para manter uma boa performance, nosso corpo precisa se movimentar.</span>
             </h5>
             <h5 class="text-white mb-2">
                 <span lang="en">It improves our physical health, including our cardiovascular flow, our muscle strength and volume, and prevents diseases.</span>
-                <span lang="fr">Ce mouvement nous permet d'améliorer notre système cardio-vasculaire, notre force et volume musculaire, ainsi que de prévenir de l'apparition de diverses maladies et cancers.</span>
+                <span lang="fr">Ce mouvement nous permet d'améliorer notre système cardiovasculaire, notre force et volume musculaire, ainsi que de prévenir de l'apparition de diverses maladies et cancers.</span>
+                <span lang="pt">Nos movimentando nós melhoramos nosso sistema cardiovascular, nossa força e volume muscular, e prevenimos a aparição de doenças.</span>
             </h5>
             <h5 class="text-white mb-2">
                 <span lang="en">And it also boosts our happiness, libido and well-being, while decreasing stress and anxiety.</span>
                 <span lang="fr">Il permet d'augmenter sa sensation de bonheur, sa libido, son bien être général... Il aura un rôle très important dans la diminution du stress et de l'anxiété.</span>
+                <span lang="pt">Além de aumentar a sensação de felicidade, nosso libido e o bem-estar geral, enquanto diminui o estresse e anxiedade.</span>
             </h5>
           </div>
         </div>
@@ -217,6 +234,7 @@
                   <a href="https://docs.google.com/forms/d/e/1FAIpQLSeo3_N7PP2FWLl225uDJYVQbAUtoVXqoEpw5Y3YupTwKZO50g/viewform?usp=sf_link" target="_blank" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i>
                       <span lang="en"> Personalized program - contact us</span>
                       <span lang="fr"> Programme personnalisé - nous contacter</span>
+                      <span lang="pt"> Programa personalizado - entrar em contato</span>
                       <span class="obliqueline">&nbsp;60€&nbsp;</span>&nbsp;39€
                   </a>
               </h6>
@@ -224,12 +242,14 @@
                   <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i>
                       <span lang="en"> Quarantine (Bodyweight) program - soon</span>
                       <span lang="fr"> Programme spécial quarantaine (poids du corps) - bientôt</span>
+                      <span lang="pt"> Programa especial quarentena (peso corporal) - aguarde</span>
                   </a>
               </h6>
               <h6 class="text-center mb-3">
                   <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i>
                       <span lang="en"> Push-Pull-Leg program - soon</span>
                       <span lang="fr"> Programme Push-Pull-Leg - bientôt</span>
+                      <span lang="pt"> Programa Push-Pull-Leg - aguarde</span>
                    </a>
               </h6>
           </div>
@@ -249,6 +269,7 @@
           <div class="middle">
               <span lang="en">NUTRITION</span>
               <span lang="fr">NUTRITION</span>
+              <span lang="pt">NUTRIÇÃO</span>
           </div>
         </div>
         <div id="nutrition" class="col-xl-4 col-lg-5">
@@ -257,19 +278,23 @@
                 <i class="fas fa-utensil-spoon fa-lg"></i>
                 <span lang="en"> NUTRITION </span>
                 <span lang="fr"> NUTRITION </span>
+                <span lang="pt"> NUTRIÇÃO </span>
                 <i class="fas fa-apple-alt fa-lg"></i>
             </h4>
             <h5 class="text-white mb-2">
                 <span lang="en">Our intestine is our "second brain", with more than 200 million neurons.</span>
-                <span lang="fr">L'intestin est en réalité notre deuxième cerveau, car il comprend à lui seul 200 millions de neurones.</span>
+                <span lang="fr">L'intestin est en réalité notre «&nbsp;deuxième cerveau&nbsp;», car il comprend à lui seul 200 millions de neurones.</span>
+                <span lang="pt">Nosso intestino é nosso "segundo cérebro", com mais de 200 milhões de neurônios.</span>
             </h5>
             <h5 class="text-white mb-2">
                 <span lang="en">It has been shown that what we eat directly impacts our emotions, moods, thoughts...</span>
                 <span lang="fr">Il a été prouvé que ce que nous mangeons a un impact direct sur nos émotions, nos humeurs, nos pensées...</span>
+                <span lang="pt">Já foi provado que nossa alimentação há um impacto direto sobre nossas emoções, humor e pensamentos...</span>
             </h5>
             <h5 class="text-white mb-0">
                 <span lang="en">That is why a balanced and proper diet is important, which should be individualized to take into account personal goals, such as weight loss, muscle gain, a healthier lifestyle...</span>
                 <span lang="fr">C'est pourquoi il est aussi important d'avoir une alimentation correcte et équilibrée, individualisé à chacun, que ce soit pour une prise de masse musculaire, une perte de masse grasse, une vie plus saine...</span>
+                <span lang="pt">Por essa razão uma alimentação correta e balanceada é importante, a qual deve ser individualizada a cada um, seja para perda de peso, ganho de músculo, uma vida mais saudável...</span>
             </h5>
           </div>
         </div>
@@ -280,6 +305,7 @@
                   <a href="https://docs.google.com/forms/d/e/1FAIpQLSeo3_N7PP2FWLl225uDJYVQbAUtoVXqoEpw5Y3YupTwKZO50g/viewform?usp=sf_link" target="_blank" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i>
                       <span lang="en"> Personalized diet - contact us</span>
                       <span lang="fr"> Plan alimentaire personnalisé - nous contacter</span>
+                      <span lang="pt"> Plano nutricional personalizado - entrar em contato</span>
                       <span class="obliqueline">&nbsp;60€&nbsp;</span>&nbsp;39€
                   </a>
               </h6>
@@ -288,6 +314,7 @@
                       <i class="fas fa-hourglass-half fa-lg"></i>
                       <span lang="en"> Muscle Gain diet - soon</span>
                       <span lang="fr"> Diète pour la prise de masse - bientôt</span>
+                      <span lang="pt"> Plano nutricional para ganho de músculo - aguarde</span>
                   </a>
               </h6>
               <h6 class="text-center mb-3">
@@ -295,6 +322,7 @@
                       <i class="fas fa-hourglass-half fa-lg"></i>
                       <span lang="en"> Weight Loss diet - soon</span>
                       <span lang="fr"> Diète pour la perte de poids - bientôt</span>
+                      <span lang="pt"> Plano nutricional para perda de peso - aguarde</span>
                    </a>
               </h6>
               <h6 class="text-center mb-3">
@@ -302,6 +330,7 @@
                       <i class="fas fa-hourglass-half fa-lg"></i>
                       <span lang="en"> Vegan (Plant-based) diet - soon</span>
                       <span lang="fr"> Diète vegane - bientôt</span>
+                      <span lang="pt"> Plano nutricional vegano (plant-based) - aguarde</span>
                   </a>
               </h6>
           </div>
@@ -321,6 +350,7 @@
           <div class="middle">
               <span lang="en">REST</span>
               <span lang="fr">REPOS</span>
+              <span lang="pt">REPOUSO</span>
           </div>
         </div>
         <div id="rest" class="col-xl-4 col-lg-5">
@@ -329,19 +359,23 @@
                 <i class="fas fa-cloud-moon fa-lg"></i>
                 <span lang="en"> REST </span>
                 <span lang="fr"> REPOS </span>
+                <span lang="pt"> REPOUSO </span>
                 <i class="fas fa-bed fa-lg"></i>
             </h4>
             <h5 class="text-white mb-2">
-                <span lang="en">The benefits of relaxation are huge, they create synergy between body and mind, restructuring the individual.</span>
+                <span lang="en">The benefits of relaxation are huge, it creates synergy between body and mind, restructuring the individual.</span>
                 <span lang="fr">Les énormes bienfaits de la relaxation permettent de créer l'harmonie entre le corps et l'esprit, et favorisent ainsi la restructuration de l'individu.</span>
+                <span lang="pt">Os benefícios do relaxamento são enormes, ele cria sinergia entre corpo e mente, gerando uma reestruturação do indivíduo.</span>
             </h5>
             <h5 class="text-white mb-2">
                 <span lang="en">In a world where we are constantly subject to distractions, it is important to create time for us, to empty our minds, relief stress and find our well-being.</span>
                 <span lang="fr">Dans un monde où nous sommes constamment soumis à nos pensées, le temps pour soi est absolument important, pour se vider l'esprit et retrouver son bien être.</span>
+                <span lang="pt">Num mundo no qual somos constantemente sujeitos a distrações, o tempo para si é absolutamente importante, para limpar a mente e encontrar nosso bem-estar.</span>
             </h5>
             <h5 class="text-white mb-0">
                 <span lang="en">Relaxation can improve a multitude of areas: emotional, intellectual, corporeal, functional...</span>
-                <span lang="fr">La relaxation améliore différents domaines : émotionnel, intellectuel, corporel, fonctionnel...</span>
+                <span lang="fr">La relaxation améliore différents domaines&nbsp;: émotionnel, intellectuel, corporel, fonctionnel...</span>
+                <span lang="pt">O relaxamento beneficia diversas áreas: emocional, intelectual, corporal, funcional...</span>
             </h5>
           </div>
         </div>
@@ -351,8 +385,9 @@
               <h6 class="text-center mb-3">
                   <a href="#rest" class="text-white-50 js-scroll-trigger">
                       <i class="fas fa-hourglass-half fa-lg"></i>
-                      <span lang="en"> Sleep - soon</span>
-                      <span lang="fr"> Sommeil - bientôt</span>
+                      <span lang="en"> Sleep quality - soon</span>
+                      <span lang="fr"> Qualité du sommeil - bientôt</span>
+                      <span lang="pt"> Qualidade do sono - aguarde</span>
                   </a>
               </h6>
               <h6 class="text-center mb-3">
@@ -360,6 +395,7 @@
                       <i class="fas fa-hourglass-half fa-lg"></i>
                       <span lang="en"> Meditation - soon</span>
                       <span lang="fr"> Meditation - bientôt</span>
+                      <span lang="pt"> Meditação - aguarde</span>
                    </a>
               </h6>
               <h6 class="text-center mb-3">
@@ -367,6 +403,7 @@
                       <i class="fas fa-hourglass-half fa-lg"></i>
                       <span lang="en"> Breathing technique - soon</span>
                       <span lang="fr"> La respiration - bientôt</span>
+                      <span lang="pt"> Técnicas de respiração - aguarde</span>
                   </a>
               </h6>
               <h6 class="text-center mb-3">
@@ -374,6 +411,7 @@
                       <i class="fab fa-youtube fa-lg"></i>
                       <span lang="en"> Cardiac Coherence - video</span>
                       <span lang="fr"> Cohérence Cardiaque - vidéo</span>
+                      <span lang="pt"> Coerência Cardíaca - vídeo</span>
                   </a>
               </h6>
           </div>
@@ -450,16 +488,19 @@
         <div class="col-lg-12 mx-auto justify-content-center social">
             <span lang="en">Thanks for visiting, see you again soon.</span>
             <span lang="fr">Merci de votre visite, à très bientôt.</span>
+            <span lang="pt">Obrigado pela visita, até logo.</span>
             <br/><br/>
             be100you
             <br/><br/>
             <a href="mailto:hi@iaco.me"><i class="far fa-envelope"></i></a>
             <span lang="en"> send us a letter</span>
             <span lang="fr"> envoyez-nous une lettre</span>
+            <span lang="pt"> envie-nos uma carta</span>
             <br/><br/>
             <a href="https://iaco.me/terms"><i class="far fa-copyright"></i></a>
             <span lang="en"> rights and terms</span>
             <span lang="fr"> droits et conditions</span>
+            <span lang="pt"> direitos e termos</span>
         </div>
       </div>
     </div>
