--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <h2 class="text-white mx-auto mt-2 mb-5">
           <span lang="en">Improve your exercise, nutrition & rest</span>
           <span lang="fr">Améliorez votre activité physique, nutrition & repos</span>
-          <span lang="pt">Aperfeiçoe seus exercîcios, nutrição e repouso</span>
+          <span lang="pt">Aperfeiçoe seus exercícios, nutrição e repouso</span>
         </h2>
         <a href="#triangle" class="btn btn-primary js-scroll-trigger">
           <i class="fas fa-caret-right"></i>
