--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
                       <span lang="pt">Exercício - academia, esportes individuais e coletivos...</span>
                   </h5>
                   <h5 class="text-white mx-auto">
-                      <span lang="en">Nutrition - macro & micronutrients, energy...</span>
-                      <span lang="fr">Nutrition - macro & micronutriments, l'énergie...</span>
-                      <span lang="pt">Nutrição - macro & micronutrientes, energia...</span>
+                      <span lang="en">Nutrition - macro & micronutrients, food quality, energy...</span>
+                      <span lang="fr">Nutrition - macro & micronutriments, qualité des aliments, énergie...</span>
+                      <span lang="pt">Nutrição - macro & micronutrientes, qualidade alimentar, energia...</span>
                   </h5>
                   <h5 class="text-white mx-auto">
-                      <span lang="en">Rest - sleep, peace of mind, stress/anxiety control...</span>
+                      <span lang="en">Rest - sleep, peace of mind, stress & anxiety control...</span>
                       <span lang="fr">Repos - le sommeil, la tranquillité de l'esprit, le contrôle du stress...</span>
-                      <span lang="pt">Repouso - sono, tranquilidade da mente, controle do estresse...</span>
+                      <span lang="pt">Repouso - qualidade do sono, tranquilidade da mente, controle do estresse...</span>
                   </h5>
                 </i>
                 <br/>
