--- a/index.html
+++ b/index.html
@@ -363,19 +363,19 @@
                 <i class="fas fa-bed fa-lg"></i>
             </h4>
             <h5 class="text-white mb-2">
-                <span lang="en">The benefits of relaxation are huge, it creates synergy between body and mind, restructuring the individual.</span>
+                <span lang="en">The benefits of good rest are huge, it creates synergy between body and mind, restructuring the individual.</span>
                 <span lang="fr">Les énormes bienfaits de la relaxation permettent de créer l'harmonie entre le corps et l'esprit, et favorisent ainsi la restructuration de l'individu.</span>
-                <span lang="pt">Os benefícios do relaxamento são enormes, ele cria sinergia entre corpo e mente, gerando uma reestruturação do indivíduo.</span>
+                <span lang="pt">Os benefícios do relaxamento são enormes, ele cria sinergia entre corpo e mente, reestruturando o indivíduo.</span>
             </h5>
             <h5 class="text-white mb-2">
                 <span lang="en">In a world where we are constantly subject to distractions, it is important to create time for us, to empty our minds, relief stress and find our well-being.</span>
                 <span lang="fr">Dans un monde où nous sommes constamment soumis à nos pensées, le temps pour soi est absolument important, pour se vider l'esprit et retrouver son bien être.</span>
-                <span lang="pt">Num mundo no qual somos constantemente sujeitos a distrações, o tempo para si é absolutamente importante, para limpar a mente e encontrar nosso bem-estar.</span>
+                <span lang="pt">Num mundo no qual somos constantemente sujeitos a distrações, o tempo para si é muito importante, pois limpa a mente e nos permite encontrar nosso bem-estar.</span>
             </h5>
             <h5 class="text-white mb-0">
                 <span lang="en">Relaxation can improve a multitude of areas: emotional, intellectual, corporeal, functional...</span>
                 <span lang="fr">La relaxation améliore différents domaines&nbsp;: émotionnel, intellectuel, corporel, fonctionnel...</span>
-                <span lang="pt">O relaxamento beneficia diversas áreas: emocional, intelectual, corporal, funcional...</span>
+                <span lang="pt">O repouso beneficia as áreas: emocional, intelectual, corporal, funcional...</span>
             </h5>
           </div>
         </div>
