--- a/index.html
+++ b/index.html
@@ -409,9 +409,17 @@
               <h6 class="text-center mb-3">
                   <a href="https://youtu.be/Ltgh5lB3u60" target="_blank" class="js-scroll-trigger">
                       <i class="fab fa-youtube fa-lg"></i>
-                      <span lang="en"> Cardiac Coherence - video</span>
-                      <span lang="fr"> Cohérence Cardiaque - vidéo</span>
-                      <span lang="pt"> Coerência Cardíaca - vídeo</span>
+                      <span lang="en"> Cardiac coherence - video</span>
+                      <span lang="fr"> Cohérence cardiaque - vidéo</span>
+                      <span lang="pt"> Coerência cardíaca - vídeo</span>
+                  </a>
+              </h6>
+              <h6 class="text-center mb-3">
+                  <a href="https://youtu.be/PSAhrB2V5kQ" target="_blank" class="js-scroll-trigger">
+                      <i class="fab fa-youtube fa-lg"></i>
+                      <span lang="en"> Square breathing technique - video</span>
+                      <span lang="fr"> Respiration carré - vidéo</span>
+                      <span lang="pt"> Respiração quadrada - vídeo</span>
                   </a>
               </h6>
           </div>
