--- a/index.html
+++ b/index.html
@@ -418,8 +418,8 @@
                   <a href="https://youtu.be/PSAhrB2V5kQ" target="_blank" class="js-scroll-trigger">
                       <i class="fab fa-youtube fa-lg"></i>
                       <span lang="en"> Square breathing technique - video</span>
-                      <span lang="fr"> Respiration carré - vidéo</span>
-                      <span lang="pt"> Respiração quadrada - vídeo</span>
+                      <span lang="fr"> Technique respiration carré - vidéo</span>
+                      <span lang="pt"> Técnina de respiração quadrada - vídeo</span>
                   </a>
               </h6>
           </div>
