--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       </div>
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
-              <h6 class="text-center mb-3">
+              <h6 class="text-white-50 text-center mb-3">
                   <a href="https://docs.google.com/forms/d/e/1FAIpQLSeo3_N7PP2FWLl225uDJYVQbAUtoVXqoEpw5Y3YupTwKZO50g/viewform?usp=sf_link" target="_blank" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i>
                       <span lang="en"> Personalized program - contact us</span>
                       <span lang="fr"> Programme personnalisé - nous contacter</span>
@@ -238,19 +238,21 @@
                       <span class="obliqueline">&nbsp;60€&nbsp;</span>&nbsp;39€
                   </a>
               </h6>
-              <h6 class="text-center mb-3">
-                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i>
-                      <span lang="en"> Quarantine (Bodyweight) program - soon</span>
-                      <span lang="fr"> Programme spécial quarantaine (poids du corps) - bientôt</span>
-                      <span lang="pt"> Programa especial quarentena (peso corporal) - aguarde</span>
+              <h6 class="text-white-50 text-center mb-3">
+                  <span lang="en"> Quarantine (Bodyweight) program - soon</span>
+                  <span lang="fr"> Programme spécial quarantaine (poids du corps) - bientôt</span>
+                  <span lang="pt"> Programa especial quarentena (peso corporal) - aguarde</span>
+                  <a href="#exercise" class="text-white-50 js-scroll-trigger">
+                      <i class="fas fa-hourglass-half fa-lg"></i>
                   </a>
               </h6>
-              <h6 class="text-center mb-3">
-                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i>
-                      <span lang="en"> Push-Pull-Leg program - soon</span>
-                      <span lang="fr"> Programme Push-Pull-Leg - bientôt</span>
-                      <span lang="pt"> Programa Push-Pull-Leg - aguarde</span>
-                   </a>
+              <h6 class="text-white-50 text-center mb-3">
+                  <span lang="en"> Push-Pull-Leg program - soon</span>
+                  <span lang="fr"> Programme Push-Pull-Leg - bientôt</span>
+                  <span lang="pt"> Programa Push-Pull-Leg - aguarde</span>
+                  <a href="#exercise" class="text-white-50 js-scroll-trigger">
+                      <i class="fas fa-hourglass-half fa-lg"></i>
+                  </a>
               </h6>
           </div>
       </div>
@@ -301,36 +303,36 @@
       </div>
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
-              <h6 class="text-center mb-3">
+              <h6 class="text-white text-center mb-3">
                   <a href="https://docs.google.com/forms/d/e/1FAIpQLSeo3_N7PP2FWLl225uDJYVQbAUtoVXqoEpw5Y3YupTwKZO50g/viewform?usp=sf_link" target="_blank" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i>
                       <span lang="en"> Personalized diet - contact us</span>
                       <span lang="fr"> Plan alimentaire personnalisé - nous contacter</span>
                       <span lang="pt"> Plano nutricional personalizado - entrar em contato</span>
-                      <span class="obliqueline">&nbsp;60€&nbsp;</span>&nbsp;39€
+                      <span class="obliqueline"> 60€&nbsp;</span>&nbsp;39€
                   </a>
               </h6>
-              <h6 class="text-center mb-3">
+              <h6 class="text-white-50 text-center mb-3">
+                  <span lang="en">Muscle Gain diet - soon</span>
+                  <span lang="fr">Diète pour la prise de masse - bientôt</span>
+                  <span lang="pt">Plano nutricional para ganho de músculo - aguarde</span>
                   <a href="#nutrition" class="text-white-50 js-scroll-trigger">
                       <i class="fas fa-hourglass-half fa-lg"></i>
-                      <span lang="en"> Muscle Gain diet - soon</span>
-                      <span lang="fr"> Diète pour la prise de masse - bientôt</span>
-                      <span lang="pt"> Plano nutricional para ganho de músculo - aguarde</span>
                   </a>
               </h6>
-              <h6 class="text-center mb-3">
+              <h6 class="text-white-50 text-center mb-3">
+                  <span lang="en">Weight Loss diet - soon</span>
+                  <span lang="fr">Diète pour la perte de poids - bientôt</span>
+                  <span lang="pt">Plano nutricional para perda de peso - aguarde</span>
                   <a href="#nutrition" class="text-white-50 js-scroll-trigger">
                       <i class="fas fa-hourglass-half fa-lg"></i>
-                      <span lang="en"> Weight Loss diet - soon</span>
-                      <span lang="fr"> Diète pour la perte de poids - bientôt</span>
-                      <span lang="pt"> Plano nutricional para perda de peso - aguarde</span>
                    </a>
               </h6>
-              <h6 class="text-center mb-3">
+              <h6 class="text-white-50 text-center mb-3">
+                  <span lang="en">Vegan (Plant-based) diet - soon</span>
+                  <span lang="fr">Diète vegane - bientôt</span>
+                  <span lang="pt">Plano nutricional vegano (plant-based) - aguarde</span>
                   <a href="#nutrition" class="text-white-50 js-scroll-trigger">
                       <i class="fas fa-hourglass-half fa-lg"></i>
-                      <span lang="en"> Vegan (Plant-based) diet - soon</span>
-                      <span lang="fr"> Diète vegane - bientôt</span>
-                      <span lang="pt"> Plano nutricional vegano (plant-based) - aguarde</span>
                   </a>
               </h6>
           </div>
@@ -382,44 +384,44 @@
       </div>
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
-              <h6 class="text-center mb-3">
-                  <a href="#rest" class="text-white-50 js-scroll-trigger">
-                      <i class="fas fa-hourglass-half fa-lg"></i>
-                      <span lang="en"> Sleep quality - soon</span>
-                      <span lang="fr"> Qualité du sommeil - bientôt</span>
-                      <span lang="pt"> Qualidade do sono - aguarde</span>
+              <h6 class="text-white text-center mb-3">
+                  <span lang="en">Sleep quality </span>
+                  <span lang="fr">Qualité du sommeil </span>
+                  <span lang="pt">Qualidade do sono </span>
+                  <a href="/pdf/sleep.pdf" class="js-scroll-trigger">
+                      <i class="fas fa-file-alt fa-lg"></i> pdf
                   </a>
               </h6>
-              <h6 class="text-center mb-3">
+              <h6 class="text-white-50 text-center mb-3">
+                  <span lang="en">Meditation - soon </span>
+                  <span lang="fr">Meditation - bientôt </span>
+                  <span lang="pt">Meditação - aguarde </span>
                   <a href="#rest" class="text-white-50 js-scroll-trigger">
                       <i class="fas fa-hourglass-half fa-lg"></i>
-                      <span lang="en"> Meditation - soon</span>
-                      <span lang="fr"> Meditation - bientôt</span>
-                      <span lang="pt"> Meditação - aguarde</span>
                    </a>
               </h6>
-              <h6 class="text-center mb-3">
+              <h6 class="text-white-50 text-center mb-3">
+                  <span lang="en"> Breathing technique - soon</span>
+                  <span lang="fr"> La respiration - bientôt</span>
+                  <span lang="pt"> Técnicas de respiração - aguarde</span>
                   <a href="#rest" class="text-white-50 js-scroll-trigger">
                       <i class="fas fa-hourglass-half fa-lg"></i>
-                      <span lang="en"> Breathing technique - soon</span>
-                      <span lang="fr"> La respiration - bientôt</span>
-                      <span lang="pt"> Técnicas de respiração - aguarde</span>
                   </a>
               </h6>
-              <h6 class="text-center mb-3">
+              <h6 class="text-white text-center mb-3">
+                  <span lang="en">Cardiac coherence </span>
+                  <span lang="fr">Cohérence cardiaque </span>
+                  <span lang="pt">Coerência cardíaca </span>
                   <a href="https://youtu.be/Ltgh5lB3u60" target="_blank" class="js-scroll-trigger">
-                      <i class="fab fa-youtube fa-lg"></i>
-                      <span lang="en"> Cardiac coherence - video</span>
-                      <span lang="fr"> Cohérence cardiaque - vidéo</span>
-                      <span lang="pt"> Coerência cardíaca - vídeo</span>
+                      <i class="fab fa-youtube fa-lg"></i> youtube
                   </a>
               </h6>
-              <h6 class="text-center mb-3">
+              <h6 class="text-white text-center mb-3">
+                  <span lang="en"> Square breathing technique</span>
+                  <span lang="fr"> Technique respiration carré</span>
+                  <span lang="pt"> Técnina de respiração quadrada</span>
                   <a href="https://youtu.be/PSAhrB2V5kQ" target="_blank" class="js-scroll-trigger">
-                      <i class="fab fa-youtube fa-lg"></i>
-                      <span lang="en"> Square breathing technique - video</span>
-                      <span lang="fr"> Technique respiration carré - vidéo</span>
-                      <span lang="pt"> Técnina de respiração quadrada - vídeo</span>
+                      <i class="fab fa-youtube fa-lg"></i> youtube
                   </a>
               </h6>
           </div>
