--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                   <span lang="en">Sleep quality </span>
                   <span lang="fr">Qualité du sommeil </span>
                   <span lang="pt">Qualidade do sono </span>
-                  <a href="/pdf/sleep.pdf" class="js-scroll-trigger">
+                  <a href="javascript:void(0);" onclick="window.open('pdf/sleep.pdf#'+document.body.className)" class="js-scroll-trigger">
                       <i class="fas fa-file-alt fa-lg"></i> pdf
                   </a>
               </h6>
