--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                   <span lang="fr">Qualité du sommeil </span>
                   <span lang="pt">Qualidade do sono </span>
                   <a href="javascript:void(0);" onclick="window.open('pdf/sleep.pdf#'+document.body.className)" class="js-scroll-trigger">
-                      <i class="fas fa-file-alt fa-lg"></i> pdf
+                      <i class="fas fa-file-alt fa-lg"></i>&nbsp;pdf
                   </a>
               </h6>
               <h6 class="text-white-50 text-center mb-3">
@@ -409,11 +409,15 @@
                   </a>
               </h6>
               <h6 class="text-white text-center mb-3">
-                  <span lang="en">Cardiac coherence </span>
+                  <span lang="en">Heart coherence </span>
                   <span lang="fr">Cohérence cardiaque </span>
                   <span lang="pt">Coerência cardíaca </span>
+                  <a href="javascript:void(0);" onclick="window.open('pdf/heart-coherence.pdf#'+document.body.className)" class="js-scroll-trigger">
+                      <i class="fas fa-file-alt fa-lg"></i>&nbsp;pdf
+                  </a>
+                  /
                   <a href="https://youtu.be/Ltgh5lB3u60" target="_blank" class="js-scroll-trigger">
-                      <i class="fab fa-youtube fa-lg"></i> youtube
+                      <i class="fab fa-youtube fa-lg"></i>&nbsp;youtube
                   </a>
               </h6>
               <h6 class="text-white text-center mb-3">
@@ -421,7 +425,7 @@
                   <span lang="fr"> Technique respiration carré</span>
                   <span lang="pt"> Técnina de respiração quadrada</span>
                   <a href="https://youtu.be/PSAhrB2V5kQ" target="_blank" class="js-scroll-trigger">
-                      <i class="fab fa-youtube fa-lg"></i> youtube
+                      <i class="fab fa-youtube fa-lg"></i>&nbsp;youtube
                   </a>
               </h6>
           </div>
